--- a/StockData/StockMVC/package.json
+++ b/StockData/StockMVC/package.json
@@ -3,6 +3,9 @@
   "name": "stockmvc",
   "private": true,
   "devDependencies": {
-    "bootstrap": "3.3.6"
+    "bootstrap": "3.3.6",
+    "jquery": "2.2.4",
+    "jquery-validation": "1.15.0",
+    "jquery-validation-unobtrusive": "3.2.6"
   }
 }
